@@ -8,9 +8,9 @@
 	<status>RC1</status>
 	<status>Beta</status>
 	
-	<build>Build 3197</build>
+	<build>Build 3198</build>
 	<name>toendaCMS</name>
 	<tagline>Your ideas ahead</tagline>
-	<release_date>31.07.2007 - 12:55</release_date>
+	<release_date>01.08.2007 - 16:40</release_date>
 	<toenda_copyright>2003 - 2007</toenda_copyright>
 </version>
