@@ -28,7 +28,7 @@ Version 1.6
 Developer Version
 	- 1.6.0 Development
 
-Building Steps: 3197
+Building Steps: 3198
 
 
 
@@ -53,6 +53,7 @@ Building Steps: 3197
  - changed: __NO_SPAM__ changed into [at]
  - changed: Default content text in imagegallery removed
  - changed: Framework rewrite to workl well with PHP5
+ - changed: Configuration now read by simple_xml parser from PHP5
 
  - added: New SEO format available: instead of using the old url format
           [www.domain.com/index.php?id=frontpage&lang=en]
